Closed Bug 1375189 Opened 7 years ago Closed 7 years ago

nsNodeUtils::CloneAndAdopt should not use aNodesWithProperties if it is not needed

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: bytesized, Assigned: bytesized)

References

Details

Attachments

(1 file)

Although the time taken by unnecessary usage of aNodesWithProperties in nsNodeUtils::CloneAndAdopt is not very substantial, it does seem to be >1% of time taken in cloneNode and would be very easy to fix.
Attachment #8880090 - Flags: review?(bzbarsky)
Comment on attachment 8880090 [details]
Bug 1375189 - Don't use aNodesWithProperties in nsNodeUtils::CloneAndAdopt if it is not needed

https://reviewboard.mozilla.org/r/151444/#review156592

Good catch, though I would vaugely prefer Maybe instead of maybe-null pointer to represent lack of the array.  r=me either way.
Attachment #8880090 - Flags: review?(bzbarsky) → review+
Pushed by ksteuber@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/98537bce9286
Don't use aNodesWithProperties in nsNodeUtils::CloneAndAdopt if it is not needed r=bz
https://hg.mozilla.org/mozilla-central/rev/98537bce9286
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: