Bug 1375189 - Don't use aNodesWithProperties in nsNodeUtils::CloneAndAdopt if it is not needed r=bz

MozReview-Commit-ID: 9vu3HCQkDKf